# esp32c3-rtic-tau

./: README.md
esp32c3/: Cargo.toml
esp32c3/.cargo/: config.toml
esp32c3/examples/: cmd_crc_cobs_lib.rs  panic.rs  rtic_blinky.rs  uart_echo.rs  uart_echo_split.rs
host/src/: lib.rs  main.rs
